# wordle

./: .gitignore  README.md  pyproject.toml  wordle_agent.pt
src/: agent.py  main.py  structures.py  wordle.py
